# liquid-nanochat

./: .gitignore  CLAUDE.md  LIQUID.md  README.md  index.html  pyproject.toml
.pr/: index.html
nanochat/: attention.py  common.py  engine.py  gpt.py  liquid.py
prs/3/: index.html
scripts/: liquid_pretrain.py  liquid_smoke_test.py
tests/: test_engine.py  test_liquid.py
